# HADES

./: Cargo.toml  move_rust.ps1  plan.md  setup_crates.ps1
apps/viewer/: Cargo.toml
apps/viewer/src/: main.rs
assets/shaders/: shader.wgsl
crates/hades_core/: Cargo.toml
crates/hades_core/src/: lib.rs
crates/hades_gpu/: Cargo.toml
crates/hades_gpu/src/: lib.rs
crates/hades_math/: Cargo.toml
crates/hades_platform/: Cargo.toml
crates/hades_platform/src/: lib.rs
crates/hades_renderer/: Cargo.toml
crates/hades_renderer/src/: graph.rs  lib.rs  renderer.rs
crates/hades_scene/: Cargo.toml
crates/hades_scene/src/: lib.rs
crates/hades_text/: Cargo.toml
crates/hades_text/src/: lib.rs
src/: binning.wgsl  graph.rs  main.rs  renderer.rs
