[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/*"
]

[workspace.dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
env_logger = "0.11.10"
etagere = "0.3.0"
fontdue = "0.9.3"
glam = { version = "0.33.0", features = ["bytemuck"] }
log = "0.4.29"
pollster = "0.4.0"
rustybuzz = "0.20.1"
wgpu = "29.0.3"
winit = "0.30.13"
